force-app/main/default/objects/Commitee__c/Commitee__c.object-meta.xml
<CustomObject>
    <label>Commitee</label>
    <nameField>
        <label>Commitee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commitees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>