force-app/main/default/objects/Commitee__c/fields/Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location__c</fullName>
    <label>Delivery Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_Location</valueSetName>
    </valueSet>
</CustomField>