force-app/main/default/objects/Commitee__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Commitees</relationshipLabel>
    <relationshipName>Commitees</relationshipName>
    <type>Lookup</type>
</CustomField>